# workbench

./: .env.template  .gitignore  .prettierrc  404.html  AGENTS_PLAN.md  CLAUDE.md  Makefile  README.md  SETUP.md  WORKSHOP_DRY_RUN.md  faculty-staff-pilot-outline-2026-04-30.md  index.html  pyproject.toml  pytest.ini  workbench-features-spec-2026-04-30.md  workshop-curated-examples-2026-04-30.md
.claude/skills/product-native-frontend-design/: SKILL.md
.claude/skills/update-nnsight-deps/: SKILL.md
.github/: dependabot.yml
.github/workflows/: check.yml  e2e.yml  main.yml  modal.yml  preview-deploy.yml  preview-teardown.yml
deploy/preview/: Chart.yaml  values.yaml
deploy/preview/templates/: _helpers.tpl  deployment-api.yaml  deployment.yaml  ingress-api.yaml  ingress.yaml  service-api.yaml  service.yaml
development/tests/: index.html
docker/: Dockerfile  dockerfile.service  dockerfile.uv
docs/src/: index.md  patch-lens.md  quickstart.md
docs/src/development/: tests.md
interp-tools/: package.json
interp-tools/src/: LogitLensWidget.tsx  index.ts
modal/: gpu_image.py  image.py
patch-lens/: index.html
quickstart/: index.html
scripts/: api.sh  docker.sh  e2e.sh  precache_workshop_payloads.py  test.sh  web.sh
search/: search_index.json
supabase/: config.toml
supabase/migrations/: 20260716192819_enable_rls.sql
workbench/: __init__.py  conftest.py
workbench/_api/: .dockerignore  .env.template  Dockerfile  _metadata_cache.json  _minimal_app.py  _remote_poll.py  auth.py  data_models.py  main.py  metadata.py  sse.py  state.py  streaming_backend.py  telemetry.py
workbench/_api/_model_configs/: dev.toml  e2e.toml  local.toml  prod.toml  template.toml  test.toml  workshop.toml
workbench/_api/_workshop_examples/: branching_demo_fixture.json  branching_demo_workshop.json  commitment_strip_fixture.json  manifest.json  prompt_influence_fixture.json  task1_ex1_51st_state.json  task1_ex2_mri_inventor.json  task1_ex3_bandura_paper.json  task1_ex4_lamarr_coinventor.json  task1_ex5_higgs_boson.json  task1_ex6_foucault_surveillance.json
workbench/_api/configs/: app.py  models.py  tools.py
workbench/_api/routes/: __init__.py  activation_patching.py  branching.py  branching_models.py  causal_mediation.py  commitment_strip.py  commitment_strip_models.py  concept_lens.py  examples.py  forward_pass.py  lens.py  lens2.py  logit_lens.py  models.py  patch.py  utils.py  vlm_lens.py
workbench/_web/: .dockerignore  .gitignore  Dockerfile  README-e2e.md  README.md  bun.lockb  bunfig.toml  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  local.db  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
workbench/logitlens/: DATA_FORMAT.md  README.md  __init__.py  collect.py  display.py  models.py  utils.py
(+519 files in other folders)
