[project]
name = "interp-workbench"
version = "0.1.0"
description = "Interpretability workbench"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.6",
    "python-dotenv>=1.0.1",
    "nnsight>=0.5.10",
    # Required for .uv_sync on Modal image
    "modal>=0.65.66",
    "einops>=0.8.1",
    # Needed bc nnsight 0.5 requires 3.10 which does not have tomllib in stdlib
    "toml>=0.10.2",
    "dill>=0.4.0",
    "influxdb-client>=1.49.0",
    "uvicorn>=0.33.0",
    "torch>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["workbench"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
